[package]
name = "rusty-xinu"
version = "0.0.1"
authors = ["Derek Kastner <dkastner@gmail.com>"]

[lib]
crate-type = ["staticlib"]

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"

[dependencies]
rlibc = "1.0.0"
